--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <!-- Footer -->
         <div class="footer">
-            <p>Copyright &copy</p>
+            <p class="copy">Copyright &copy</p>
         </div>
     </body>
 </html>
